CENG104 - Computer Programming 2/HW3 - App of Assigning Advisor to Student/compiling_error.txt
/home/huseyin/Belgeler/myCodes/CENG104 - Computer Programming 2/HW3 - App of Assigning Advisor to Student/Project.cpp: In function ‘void editStudentRecord()’:
/home/huseyin/Belgeler/myCodes/CENG104 - Computer Programming 2/HW3 - App of Assigning Advisor to Student/Project.cpp:332:5: error: ‘control’ was not declared in this scope
     control = 1;
     ^
/home/huseyin/Belgeler/myCodes/CENG104 - Computer Programming 2/HW3 - App of Assigning Advisor to Student/Project.cpp:333:9: error: ‘numberOfStudentsAssigned’ was not declared in this scope
     if (numberOfStudentsAssigned < allowedStudentCount) // assign islemi yapilacak
         ^
/home/huseyin/Belgeler/myCodes/CENG104 - Computer Programming 2/HW3 - App of Assigning Advisor to Student/Project.cpp:333:36: error: ‘allowedStudentCount’ was not declared in this scope
     if (numberOfStudentsAssigned < allowedStudentCount) // assign islemi yapilacak
                                    ^
/home/huseyin/Belgeler/myCodes/CENG104 - Computer Programming 2/HW3 - App of Assigning Advisor to Student/Project.cpp:342:30: error: ‘sid’ was not declared in this scope
             if (studentId == sid)
                              ^
/home/huseyin/Belgeler/myCodes/CENG104 - Computer Programming 2/HW3 - App of Assigning Advisor to Student/Project.cpp:343:32: error: ‘advisorId’ was not declared in this scope
                 assignedFlag = advisorId;
                                ^
